--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>SimpleRestApp</finalName>
+		<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
